@@ -1,3 +1,6 @@
+- edge -
+Fix: combobox options for association columns didn't work properly.
+
 v0.5.1 - 2009-09-11
 Fix: crash when FormPanel has no data_class_name specified.
 New: DataAccessor widgets (Form/GridPanel) now let the underlying model know which widget (i.e. which instance) accesses its data. Can be useful in virtual attributes for generating widget-specific HTML.
